--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <title>tet&tat</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style_sp.css" media="screen and (max-width: 750px)">
-    <link rel="stylesheet" href="/css/style.css" media="screen and (min-width: 751px)">
+    <link rel="stylesheet" href="./css/style_sp.css" media="screen and (max-width: 750px)">
+    <link rel="stylesheet" href="./css/style.css" media="screen and (min-width: 751px)">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Noto+Sans+JP|Noto+Serif+JP|" rel="stylesheet">
 </head>
 
@@ -44,7 +44,7 @@
         <div id="overview-content-01">
             <div class="overview-content">
                 <div class="overview-content-image">
-                    <img src="/img/1.jpg">
+                    <img src="./img/1.jpg">
                 </div>
                 <div class="overview-content-sentence">
                     <h3 class="overview-content-title">モンサンミッシェル</h3>
@@ -55,7 +55,7 @@
         <div id="overview-content-02">
             <div class="overview-content rev">
                 <div class="overview-content-image">
-                    <img src="/img/2.jpg">
+                    <img src="./img/2.jpg">
                 </div>
                 <div class="overview-content-sentence">
                     <h3 class="overview-content-title">マチュピチュ</h3>
@@ -66,7 +66,7 @@
         <div id="overview-content-03">
             <div class="overview-content">
                 <div class="overview-content-image">
-                    <img src="/img/3.jpg">
+                    <img src="./img/3.jpg">
                 </div>
                 <div class="overview-content-sentence">
                     <h3 class="overview-content-title">ストーンヘンジ</h3>
@@ -77,7 +77,7 @@
         <div id="overview-content-04">
             <div class="overview-content rev">
                 <div class="overview-content-image">
-                    <img src="/img/4.jpg">
+                    <img src="./img/4.jpg">
                 </div>
                 <div class="overview-content-sentence">
                     <h3 class="overview-content-title">サグラダファミリア</h3>
